--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class=" box">
            <div class="box-contain">
             <h2>Toys under $25</h2>
-            <div class="box-img" style="background-image: url('/images/box1.jpg');"></div>
+            <div class="box-img" style="background-image: url('../images/box1.jpg');"></div>
             <a>See more</a>
            </div>
 
@@ -95,49 +95,49 @@
         <div class=" box">
             <div class="box-contain">
                 <h2>Refresh your space</h2>
-                <div class="box-img" style="background-image: url('/images/box2.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box2.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>Gaming accessories</h2>
-                <div class="box-img" style="background-image: url('/images/box3.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box3.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>Deals in PCs</h2>
-                <div class="box-img" style="background-image: url('/images/box4.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box4.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>Beauty steals under $25</h2>
-                <div class="box-img" style="background-image: url('/images/box5.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box5.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>New year, now you</h2>
-                <div class="box-img" style="background-image: url('/images/box6.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box6.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>Fashion trends you like</h2>
-                <div class="box-img" style="background-image: url('/images/box7.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box7.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
         <div class=" box">
             <div class="box-contain">
                 <h2>Shop deals in Fashion</h2>
-                <div class="box-img" style="background-image: url('/images/box8.jpg');"></div>
+                <div class="box-img" style="background-image: url('../images/box8.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
