--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class=" box">
            <div class="box-contain">
             <h2>Toys under $25</h2>
-            <div class="box-img" style="background-image: url('../images/box1.jpg');"></div>
+            <div class="box-img" style="background-image: url('./images/box1.jpg');"></div>
             <a>See more</a>
            </div>
 
@@ -130,7 +130,7 @@
         <div class=" box">
             <div class="box-contain">
                 <h2>Fashion trends you like</h2>
-                <div class="box-img" style="background-image: url('../images/box7.jpg');"></div>
+                <div class="box-img" style="background-image: url('./images/box7.jpg');"></div>
                 <a>See more</a>
             </div>
         </div>
